<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">ВинОтчёт</string>
  <string name="production_log">Журнал производства</string>
  <string name="log">Журнал</string>
  <string name="add">Добавить</string>
  <string name="save">Сохранить</string>
  <string name="materials">Материалы</string>
  <string name="mat_consumption">Расход материалов</string>
  <string name="select_period">Выбор периода</string>
  <string name="edit">Изменить</string>
  <string name="remove">Удалить</string>
  <string name="export">Экспорт</string>
  <string name="add_title">Добавить производство</string>
  <string name="add_blend_title">Добавить новый купаж</string>
  <string name="counter1">Счётчик №1:</string>
  <string name="counter2">Счётчик №2:</string>
  <string name="cancel">Отмена</string>
  <string name="ok">OK</string>
  <string name="close">Закрыть</string>
  <string name="month_select_title">Выбор месяца</string>
  <string name="other_month">Выбрать другой месяц</string>
  <string name="statistic">Статистика</string>
  <string name="month_summary">Сводка за месяц</string>
  <string name="rework_acts">Исправимый брак</string>
  <string name="doc_stamps">Акцизные марки</string>
  <string name="rework_acts_title">Акты на испр. брак</string>
  <string name="require_title">Требования-накладные</string>
  <string name="sum">. . . . . итого:</string>
  <string name="sum2">Итого:</string>
  <string name="date">Дата</string>
  <string name="date1">Дата:</string>
  <string name="acts">Акты</string>
  <string name="require">Накладные</string>
  <string name="made">Произведено:</string>
  <string name="rest">Остаток:</string>
  <string name="new_month">Новый месяц</string>
  <string name="exit">Выход</string>
  <string name="no_sd">Карта памяти не найдена!</string>
  <string name="no_data">Данные не найдены!</string>
  <string name="no_dir">Папка с данными не создана!</string>
  <string name="bad_day">Дата не верная!</string>
  <string name="bad_counter">Данные счётчика не верные!</string>
  <string name="bad_data">Неверные данные!</string>
  <string name="month_exist">Месяц уже существует!</string>
  <string name="create">%1$s создан.</string>
  <string name="export_complete">Экспорт завершен!</string>
  <string name="left_arrow"><![CDATA[◀]]></string>
  <string name="right_arrow"><![CDATA[▶]]></string>
  <string name="log_select_title">Выбор журнала учёта</string>
  <string name="volume5">0,5</string>
  <string name="volume7">0,7</string>
  <string name="volume">Объем</string>
  <string name="settings">Настройки</string>
  <string name="sorts">Сорта вин</string>
  <string name="used_sorts">Используемые сорта вин</string>
  <string name="add_stamps_title">Добавить диапазон марок</string>
  <string name="info">Сведения о работе цеха</string>
  <string name="days_production">Произведено по дням</string>
  <string name="label">Этикетка</string>
  <string name="dal_format">%1$s дал</string>
  <string name="dal">дал</string>
  <string name="day_month_year">%1$s.%2$s.%3$s</string>
  <string name="month_year">.%1$s.%2$s</string>
  <string name="remove_entry">Удалить запись %1$s?</string>
  <string name="range_start">Начало:</string>
  <string name="range_end">Конец:</string>
  <string name="range">Серия:</string>
  <string name="number">Номер:</string>
  <string name="production">Производство</string>
  <string name="no_production">Нет записей производства</string>

</resources>
